# Pano_try2

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-stitch.cpp  native-stitch2.cpp
app/src/main/java/com/example/try2/: ImageStitchN.java  ImageStitchNative.java  MainActivity.java  MyCameraView.java  OpticalFlowProcess.java  StitchOrientation.java  StitchProcess.java  Tutorial3View.java  Utils.java
app/src/main/jni/: Android.mk  Application.mk  native-lib.cpp
app/src/main/res/drawable/: ic_arrow.xml  toggle_on.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs_my_camera_view.xml  strings.xml  styles.xml
app/src/main/res/values-night/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
opencv3410/: build.gradle
opencv3410/src/main/: AndroidManifest.xml
opencv3410/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
opencv401/: build.gradle
opencv401/src/org/opencv/android/: CameraBridgeViewBase.java
opencv420/: build.gradle
opencv420/src/main/java/org/opencv/android/: JavaCameraView.java
